# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("DfxFuzzTest") {
  module_out_path = "datamgr_service/adapter"

  include_dirs = [
    "//foundation/distributeddatamgr/datamgr_service/services/distributeddataservice/adapter/dfx/src",
    "//foundation/distributeddatamgr/datamgr_service/services/distributeddataservice/adapter/dfx/src/behaviour",
    "//foundation/distributeddatamgr/datamgr_service/services/distributeddataservice/adapter/dfx/src/fault",
    "//foundation/distributeddatamgr/datamgr_service/services/distributeddataservice/adapter/dfx/src/statistic",
    "//commonlibrary/c_utils/base/include",
  ]

  fuzz_config_file = "//foundation/distributeddatamgr/datamgr_service/test/fuzztest/dfx_fuzzer"

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "dfx_fuzzer.cpp" ]

  deps = [
    "//foundation/distributeddatamgr/datamgr_service/services/distributeddataservice/adapter:distributeddata_adapter",
    "//third_party/openssl:libcrypto_shared",
  ]

  external_deps = [ "c_utils:utils" ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":DfxFuzzTest",
  ]
}
###############################################################################
