# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

ohos_static_library("distributeddata_account_static") {
  sources = [
    "src/account_delegate.cpp",
    "src/account_delegate_impl.cpp",
  ]

  include_dirs = [
    "../include/account",
    "../include/permission",
    "../include/utils",
    "./src",
    "//utils/native/base/include",
    "//foundation/distributeddatamgr/distributeddatamgr/interfaces/innerkits/distributeddata/include",
    "//foundation/distributeddatamgr/distributeddatamgr/frameworks/common",
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/framework/include",
  ]

  cflags_cc = [ "-fvisibility=hidden" ]

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  configs = [ "//build/config/compiler:exceptions" ]

  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/adapter:distributeddata_adapter",
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/framework:distributeddatasvcfwk",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "bundle_framework:appexecfwk_base",

    # "ces:libcommonevent",
    "ability_runtime:want",
    "ces_standard:cesfwk_innerkits",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "os_account_standard:libaccountkits",
  ]
}
