# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_static_library("distributeddata_auth_static") {
  sources = [ "src/auth_delegate.cpp" ]

  include_dirs = [
    "../include",
    "../include/autils",
    "../include/communicator",
    "../include/log",
    "//third_party/json/single_include",
    "//utils/native/base/include",
    "//foundation/distributeddatamgr/distributeddatamgr/frameworks/common",
    "//foundation/distributeddatamgr/distributeddatamgr/interfaces/innerkits/app_distributeddata/include",
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/framework/include",
  ]

  cflags_cc = [ "-fvisibility=hidden" ]

  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/framework:distributeddatasvcfwk",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "deviceauth_standard:deviceauth_sdk",
    "hiviewdfx_hilog_native:libhilog",
  ]
  part_name = "distributeddatamgr"
}
