# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//foundation/distributeddatamgr/datamgr_service/datamgr_service.gni")
ohos_static_library("distributeddata_communicator_static") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  sources = [
    "src/app_pipe_handler.cpp",
    "src/app_pipe_handler.h",
    "src/app_pipe_mgr.cpp",
    "src/app_pipe_mgr.h",
    "src/ark_communication_provider.cpp",
    "src/ark_communication_provider.h",
    "src/communication_provider.cpp",
    "src/communication_provider_impl.cpp",
    "src/communication_provider_impl.h",
    "src/communicator_context.cpp",
    "src/data_buffer.cpp",
    "src/device_manager_adapter.cpp",
    "src/process_communicator_impl.cpp",
    "src/softbus_adapter.h",
    "src/softbus_adapter_standard.cpp",
    "src/softbus_client.cpp",
    "src/softbus_client.h",
  ]

  include_dirs = [
    "../include/communicator",
    "../include/dfx",
    "../include/log",
    "../include/autils",
    "../include/utils",
    "${dsoftbus_core_path}",
    "${kv_store_common_path}",
    "${kv_store_distributeddb_path}/interfaces/include",
    "${kv_store_distributeddb_path}/include",
    "${kv_store_distributeddb_path}/interfaces/include/relational",
    "${kv_store_path}/interfaces/innerkits/distributeddata/include",
    "${data_service_path}/framework/include",
  ]

  cflags_cc = [ "-fvisibility=hidden" ]

  deps = [
    "${data_service_path}/framework:distributeddatasvcfwk",
    "../dfx:distributeddata_dfx_static",
    "//foundation/distributeddatamgr/datamgr_service/services/distributeddataservice/adapter/utils:distributeddata_utils_static",
  ]

  external_deps = [
    "c_utils:utils",
    "device_manager:devicemanagersdk",
    "dsoftbus:softbus_client",
    "hilog:libhilog",
    "ipc:ipc_core",
    "netmanager_base:net_conn_manager_if",
  ]

  subsystem_name = "distributeddatamgr"
  part_name = "datamgr_service"
  defines = [ "OPENSSL_SUPPRESS_DEPRECATED" ]
}
