# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//foundation/distributeddatamgr/datamgr_service/datamgr_service.gni")

ohos_static_library("distributeddata_dfx_static") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  sources = [
    "src/behaviour/behaviour_reporter_impl.cpp",
    "src/fault/communication_fault_impl.cpp",
    "src/fault/database_fault_impl.cpp",
    "src/fault/runtime_fault_impl.cpp",
    "src/fault/service_fault_impl.cpp",
    "src/hiview_adapter.cpp",
    "src/reporter.cpp",
    "src/statistic/api_performance_statistic_impl.cpp",
    "src/statistic/database_statistic_impl.cpp",
    "src/statistic/traffic_statistic_impl.cpp",
    "src/statistic/visit_statistic_impl.cpp",
  ]

  include_dirs = [
    "./src",
    "./src/fault",
    "./src/statistic",
    "../include/dfx",
    "../include/log",
    "../include/autils",
    "${kv_store_common_path}",
    "${kv_store_path}/interfaces/inner_api/distributeddata/include",
    "//third_party/openssl/include/",
  ]

  cflags_cc = [ "-fvisibility=hidden" ]

  deps = [ "//third_party/openssl:libcrypto_shared" ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "hitrace:libhitracechain",
    "kv_store:distributeddata_inner",
  ]
  subsystem_name = "distributeddatamgr"
  part_name = "datamgr_service"
  defines = [ "OPENSSL_SUPPRESS_DEPRECATED" ]
}
