# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//foundation/distributeddatamgr/datamgr_service/datamgr_service.gni")

ohos_source_set("distributeddata_dfx") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    boundary_sanitize = true
    ubsan = true
  }
  sources = [
    "src/behaviour/behaviour_reporter_impl.cpp",
    "src/fault/cloud_sync_fault_impl.cpp",
    "src/hiview_adapter.cpp",
    "src/radar_reporter.cpp",
    "src/reporter_impl.cpp",
  ]

  include_dirs = [
    "./src",
    "./src/fault",
    "../include/dfx",
  ]

  cflags_cc = [ "-fvisibility=hidden" ]

  deps = [
    "${data_service_path}/framework:distributeddatasvcfwk",
    "${data_service_path}/adapter/communicator:distributeddata_communicator",
  ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "kv_store:datamgr_common",
    "openssl:libcrypto_shared",
  ]
  subsystem_name = "distributeddatamgr"
  part_name = "datamgr_service"
  defines = [ "OPENSSL_SUPPRESS_DEPRECATED" ]
}
