# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

ohos_static_library("distributeddata_permission_static") {
  sources = [
    "src/bundle_checker.cpp",
    "src/media_lib_checker.cpp",
    "src/permission_validator.cpp",
    "src/system_checker.cpp",
  ]

  cflags_cc = [ "-fvisibility=hidden" ]

  include_dirs = [
    "../include/permission",
    "../include/utils",
    "//utils/native/base/include",
    "//foundation/distributeddatamgr/distributeddatamgr/frameworks/common",
    "//foundation/distributeddatamgr/distributeddatamgr/interfaces/innerkits/distributeddata/include",
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/framework/include",
  ]

  if (build_public_version) {
    cflags_cc += [ "-DCONFIG_PUBLIC_VERSION" ]
  }
  ldflags = [ "-Wl,--exclude-libs,ALL" ]
  deps = [
    "../utils:distributeddata_utils_static",
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/framework:distributeddatasvcfwk",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr_standard:samgr_proxy",
  ]
  subsystem_name = "distributeddatamgr"
  part_name = "distributeddatamgr"
}
