# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//foundation/distributeddatamgr/datamgr_service/datamgr_service.gni")

ohos_static_library("distributeddata_permission_static") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  sources = [ "src/permission_validator.cpp" ]

  cflags_cc = [ "-fvisibility=hidden" ]

  include_dirs = [
    "../include/permission",
    "../include/utils",
    "${kv_store_common_path}",
    "${kv_store_path}/interfaces/innerkits/distributeddata/include",
    "//foundation/distributeddatamgr/datamgr_service/services/distributeddataservice/framework/include",
  ]

  if (build_public_version) {
    cflags_cc += [ "-DCONFIG_PUBLIC_VERSION" ]
  }
  ldflags = [ "-Wl,--exclude-libs,ALL" ]
  deps = [ "../utils:distributeddata_utils_static" ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "hilog:libhilog",
  ]
  subsystem_name = "distributeddatamgr"
  part_name = "datamgr_service"
  defines = [ "OPENSSL_SUPPRESS_DEPRECATED" ]
}
