# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_static_library("distributeddata_security_static") {
  sources = [
    "src/security.cpp",
    "src/security_adapter.cpp",
    "src/sensitive.cpp",
  ]

  cflags_cc = [ "-fvisibility=hidden" ]

  include_dirs = [
    "../include/autils",
    "../include/log",
    "../include/security",
    "../include/communicator",
    "//foundation/distributeddatamgr/distributeddatamgr/frameworks/common",
    "//foundation/distributeddatamgr/distributeddatamgr/interfaces/innerkits/app_distributeddata/include",
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/framework/include",
  ]

  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/framework:distributeddatasvcfwk",
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/libs/distributeddb:distributeddb",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "dsoftbus_standard:softbus_client",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "os_account_standard:libaccountkits",
  ]
}
