# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//foundation/distributeddatamgr/datamgr_service/datamgr_service.gni")

ohos_static_library("common_event_mock") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    boundary_sanitize = true
    ubsan = true
  }
  sources = [
    "mock/mock_common_event.cpp"
  ]

  include_dirs = [
    "mock",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  subsystem_name = "distributeddatamgr"
  part_name = "datamgr_service"
}

ohos_static_library("account_delegate_mock_static") {
  testonly = true
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    boundary_sanitize = true
    ubsan = true
  }
  sources = [
    "${data_service_path}/framework/test/mock/account_delegate_mock.cpp"
  ]

  include_dirs = [
    "${data_service_path}/framework/test/mock",
    "${data_service_path}/framework/include",
  ]

  external_deps = [
    "c_utils:utils",
    "googletest:gmock",
    "googletest:gtest",
    "hilog:libhilog",
    "kv_store:distributeddata_inner",
  ]

  subsystem_name = "distributeddatamgr"
  part_name = "datamgr_service"
}

ohos_static_library("screenlock_manager_mock") {
  testonly = true
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    boundary_sanitize = true
    ubsan = true
  }
  sources = [
    "mock/screenlock_manager.cpp"
  ]

  include_dirs = [
    "mock",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  subsystem_name = "distributeddatamgr"
  part_name = "datamgr_service"
}

group("unittest") {
  testonly = true
  deps = []

  deps += [
    "../account/test:unittest",
    "../communicator/test:unittest",
    "../dfx/test:unittest",
    "../power_manager/test:unittest",
    "../qos/test:unittest",
  ]

  if (defined(global_parts_info) &&
      defined(global_parts_info.theme_screenlock_mgr)) {
    deps += [ "${data_service_path}/adapter/screen/test:unittest" ]
  }

  if (datamgr_service_cloud) {
    deps += [ "../network/test:unittest" ]
  }
}

group("fuzztest") {
  testonly = true

  deps = [
    "../communicator/test/fuzztest:fuzztest",
    "../network/test/fuzztest/networkdelegatenormalimpl_fuzzer:fuzztest",
  ]

  if (defined(global_parts_info) &&
      defined(global_parts_info.theme_screenlock_mgr)) {
    deps += [ "../screen/test/fuzztest/screen_fuzzer:fuzztest" ]
  }
}
