# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

ohos_static_library("distributeddata_utils_static") {
  sources = [ "src/kvstore_utils.cpp" ]

  cflags_cc = [ "-fvisibility=hidden" ]

  if (build_public_version) {
    cflags_cc += [ "-DCONFIG_PUBLIC_VERSION" ]
  }

  include_dirs = [
    "../include/permission",
    "../include/utils",
    "../include/log",
    "//foundation/distributeddatamgr/distributeddatamgr/interfaces/innerkits/distributeddata/include",
    "//utils/native/base/include",
    "../include/dfx",
    "//foundation/distributeddatamgr/distributeddatamgr/frameworks/common",
  ]
  ldflags = [ "-Wl,--exclude-libs,ALL" ]
  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/adapter:distributeddata_adapter",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "bytrace_standard:bytrace_core",
    "bytrace_standard:bytrace_core",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
  subsystem_name = "distributeddatamgr"
  part_name = "distributeddatamgr"
}
